<?xml version="1.0"?>
<package format="2">
	<name>jcs_gamma_probe</name>
	<version>0.1.0</version>
	<description>ROS driver for JCS RMS30-102ASx ASCII gamma probe over RS485/USB serial</description>
	<maintainer email="aliyu.bala@createc.co.uk">Aliyu Bala</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>diagnostic_msgs</exec_depend>
</package>
